# google-code-jam-2011

./: CMakeLists.txt  README.md
qualification/: CMakeLists.txt
qualification/bot_trust/src/: CMakeLists.txt  bot_trust.hpp  main.cpp
qualification/bot_trust/test/: CMakeLists.txt  bot_trust_test.cpp
qualification/candy_splitting/src/: CMakeLists.txt  candy_splitting.hpp  main.cpp
qualification/candy_splitting/test/: CMakeLists.txt  candy_splitting_test.cpp
qualification/goro_sort/src/: CMakeLists.txt  goro_sort.hpp  main.cpp
qualification/goro_sort/test/: CMakeLists.txt  goro_sort_test.cpp
qualification/magicka/src/: CMakeLists.txt  magicka.hpp  main.cpp
qualification/magicka/test/: CMakeLists.txt  magicka_test.cpp
round1a/: CMakeLists.txt
round1a/freecell_statistics/src/: CMakeLists.txt  freecell_statistics.hpp  main.cpp
round1a/freecell_statistics/test/: CMakeLists.txt  freecell_statistics_test.cpp
round1b/: CMakeLists.txt
round1b/rpi/src/: CMakeLists.txt  main.cpp  rpi.hpp
round1b/rpi/test/: CMakeLists.txt  rpi_test.cpp
round1c/: CMakeLists.txt
round1c/perfect_harmony/src/: CMakeLists.txt  main.cpp  perfect_harmony.hpp
round1c/perfect_harmony/test/: CMakeLists.txt  perfect_harmony_test.cpp
round1c/square_tiles/src/: CMakeLists.txt  main.cpp  square_tiles.hpp
round1c/square_tiles/test/: CMakeLists.txt  square_tiles_test.cpp
